# finals-2023

cache/: README.md  build.sh  main.c  seccomp-bpf.h
cache/distrib/: hashcash.py  runner.py
dron-ap/: README.md  blyat80211.c  blyat80211.h
dron-ap/poller/: Dockerfile
dron-ap/poller/src/: ap.py  client.py  flag  init.sh  macsim-poller.script.py  poller-script.py  runpoll.sh  shim-remote.py  w.conf
dron-ap/service/: Dockerfile  blyat.ko  flag  passwd  sshd_config
evm/: Cargo.toml
evm/challenges/: challenge0  challenge1  challenge2
evm/src/: fake_tracer.rs  game_1.rs  game_2.rs  game_3.rs  interpreter.rs  launcher.rs  lib.rs  main.rs  sysless_tracer.rs  tracer.rs
metabox/: Dockerfile  Makefile
metabox/src/: base64.h  build.c  bytecode.h  forward.h  graphics.h  object.h  run.c  sha256.h  util.h  world.h
mybroker/: Dockerfile  README.md  requirements.txt  run_all.sh
mybroker/fileman/: Cargo.toml
mybroker/fileup/: Makefile  server.c
mybroker/inventory/: Makefile  inventory.cpp
mybroker/kvstore/: Makefile  server.cpp  store.cpp  store.hpp
mybroker/poller/: Dockerfile  poller.py
mybroker/web/: __init__.py  api.py  backend_api.py  model.py  portal.py  view.py  wsgi.py
niml/: Dockerfile  Makefile  client.py  fix.patch  niml.cpp  niml.ini
niml/server/: admin.php  common.php  index.php  login.php  logout.php  register.php  sandbox.php  server.php  style.css  submit.php
safebox/: manage.py
safebox/bot/: __main__.py
safebox/safebox/: asgi.py  settings.py  urls.py  wsgi.py
safebox/web/: logic.py  models.py  urls.py  views.py
(+30 files in other folders)
