[package]
name = "evm"
version = "0.1.0"
edition = "2021"

[features]
game_1 = []
game_2 = []
game_3 = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
env_logger = "0.10.0"
hex = "0.4.3"
landlock = "0.2.0"
libc = "0.2.146"
log = "0.4.19"
nix = "0.26.2"
pete = "0.10.0"
rand = "0.8.5"
rlimit = "0.10.0"
seccompiler = "0.3.0"
signal-hook = "0.3.15"
tempdir = "0.3.7"
thiserror = "1.0.40"
